# android-version-searcher

./: Cargo.toml  README.md  flake.nix
src/: kernel.rs  main.rs
