[package]
name = "android-version-searcher"
version = "0.1.0"
authors = ["Axel Karjalainen <axel@axka.fi>"]
edition = "2021"
description = "Android version searcher"
documentation = ""
readme = "README.md"
repository = "https://github.com/axelkar/android-version-searcher"
license = "MIT OR Apache-2.0"
keywords = ["android"]

[dependencies]
abootimg-oxide = "0.2.2"
clap = { version = "4.5.23", features = ["derive"] }
cpio = "0.4.1"
erofs-sys = { git = "https://github.com/ToolmanP/erofs-rs", rev = "fb5301b3cc46b909de32f86ea246eb9ecff741cf" }
flate2 = "1.0.35"
lzma-rs = "0.3.0"
memchr = "2.7.4"
